Fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ h2 {
 }
 
 .content {
-	width: 62rem;
 	margin: 0 auto;
 }
 
